--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.0.3		Wed 31 Mar 19:40:09 BST 2021
+	* Rename and switch to GH actions
 v0.0.2		Sat 19 Jan 10:07:58 GMT 2019
 	* Spring clean and up to CPAN
 v0.0.1		Wed Feb 10 19:41:28 2016 +0000 
