--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.0.5	Wed  5 Jul 07:39:11 BST 2023
+	* Rename library files
 v0.0.4	Sun  7 Aug 09:47:52 BST 2022
 	* Upload to zef repository
 v0.0.3		Wed 31 Mar 19:40:09 BST 2021
